# finalProject

./: CMakeLists.txt  README.md  README.txt  main.cpp  trigram.cpp  trigram.h  trivial.cpp  trivial.h  word.cpp  word.h
.github/workflows/: build.yaml
